--- a/slides/01-intro/intro.html
+++ b/slides/01-intro/intro.html
@@ -402,7 +402,8 @@ y = \beta_0 + \beta_1 x_1 + \cdots + \beta_p x_p + \epsilon,
 <div id="course-desciption" class="section level2">
 <h2>Course desciption</h2>
 <ul>
-<li>Read <a href="https://ucla-biostat-200c-2020spring.github.io/index.html">syllabus</a> and <a href="https://ucla-biostat-200c-2020spring.github.io/schedule.html">schedule</a> for a tentative list of topics and course logistics.</li>
+<li><p>Read <a href="https://ucla-biostat-200c-2020spring.github.io/syllabus/syllabus.html">syllabus</a> and <a href="https://ucla-biostat-200c-2020spring.github.io/schedule/schedule.html">schedule</a> for a tentative list of topics and course logistics.</p></li>
+<li><p>Teaching philosophy. Usually a GLM course is taught on blackboard/whiteboard with mostly math derivations. In this course, I will start from R code and then explain the theory behind it.</p></li>
 </ul>
 </div>
 
