--- a/slides/02-lm/lm.html
+++ b/slides/02-lm/lm.html
@@ -411,12 +411,12 @@ summary {
 ##  [9] knitr_1.28      stringr_1.4.0   xfun_0.12       digest_0.6.24  
 ## [13] rlang_0.4.4     evaluate_0.14</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ─────────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ──────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.2.1     ✓ purrr   0.3.3
 ## ✓ tibble  2.1.3     ✓ dplyr   0.8.4
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.4.0</code></pre>
-<pre><code>## ── Conflicts ────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ─────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(faraway)</code></pre>
@@ -983,7 +983,7 @@ summary(lmodi)</code></pre>
 </li>
 <li>a smaller model <span class="math inline">\(\omega\)</span> with <span class="math inline">\(q=3\)</span> parameters.</li>
 </ul></li>
-<li>The <span class="math inline">\(F\)</span>-test compare the <span class="math inline">\(F\)</span>-statistic <span class="math display">\[
+<li>The <span class="math inline">\(F\)</span>-test compares the <span class="math inline">\(F\)</span>-statistic <span class="math display">\[
 F = \frac{(\text{RSS}_{\omega} - \text{RSS}_{\Omega}) / (p - q)}{\text{RSS}_{\Omega} / (n - p)}
 \]</span> to its null distribution <span class="math inline">\(F_{p-q, n-p}\)</span>. The small p-value 0.0028 indicates we should reject the null model <span class="math inline">\(\omega\)</span>.</li>
 </ul>
@@ -998,7 +998,7 @@ F = \frac{(\text{RSS}_{\omega} - \text{RSS}_{\Omega}) / (p - q)}{\text{RSS}_{\Om
 ## ---
 ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1</code></pre>
 <ul>
-<li>We can carry out a similar <span class="math inline">\(F\)</span>-test for each predictor in a model using the <code>drop1</code> function. The nice thing is that the factors such as <code>equip</code> and <code>cpergore * usage</code> are drooped as a group.</li>
+<li>We can carry out a similar <span class="math inline">\(F\)</span>-test for each predictor in a model using the <code>drop1</code> function. The nice thing is that the factors such as <code>equip</code> and <code>cpergore * usage</code> are droped as a group.</li>
 </ul>
 <pre class="r"><code>drop1(lmodi, test = &quot;F&quot;)</code></pre>
 <pre><code>## Single term deletions
@@ -1042,7 +1042,7 @@ F = \frac{(\text{RSS}_{\omega} - \text{RSS}_{\Omega}) / (p - q)}{\text{RSS}_{\Om
 <ol style="list-style-type: decimal">
 <li><span class="math inline">\(\mathbb{E}(\mathbf{Y}) = \mathbf{X} \boldsymbol{\beta}\)</span>, or equivalently, <span class="math inline">\(\mathbb{E}(\boldsymbol{\epsilon}) = \mathbf{0}\)</span>. That is we have included all the right variables and <span class="math inline">\(Y\)</span> depends on them linearly.<br />
 </li>
-<li>Errors <span class="math inline">\(\epsilon_i\)</span> are independent and normally distributed with common variance <span class="math inline">\(\sigma^2\)</span>. That is <span class="math inline">\(\text{Var}(\widehat{\boldsymbol{\epsilon}}) = \sigma_0^2 \mathbf{I}_n\)</span>.<br />
+<li>Errors <span class="math inline">\(\epsilon_i\)</span> are independent and normally distributed with common variance <span class="math inline">\(\sigma^2\)</span>. That is <span class="math inline">\(\widehat{\boldsymbol{\epsilon}} \sim \text{N}(\mathbf{0}, \sigma_0^2 \mathbf{I}_n)\)</span>.<br />
 We’d like to check these assumptions using graphical or numerical approaches.</li>
 </ol></li>
 <li>Four commonly used diagnostic plots can be conveniently obtained by <code>plot</code> function.</li>
