--- a/slides/02-lm/lm.html
+++ b/slides/02-lm/lm.html
@@ -411,12 +411,12 @@ summary {
 ##  [9] knitr_1.28      stringr_1.4.0   xfun_0.12       digest_0.6.24  
 ## [13] rlang_0.4.4     evaluate_0.14</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ─────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.2.1     ✓ purrr   0.3.3
 ## ✓ tibble  2.1.3     ✓ dplyr   0.8.4
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.4.0</code></pre>
-<pre><code>## ── Conflicts ───────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(faraway)</code></pre>
@@ -638,11 +638,11 @@ Y = \beta_0 + \beta_1 X_1 + \beta_2 X_2 + \cdots + \beta_{p-1} X_{p-1} + \epsilo
 \]</span> where, in terms of <span class="math inline">\(n\)</span> data points, <span class="math display">\[
 \mathbf{y} = \begin{pmatrix} y_1 \\ \vdots \\ y_n \end{pmatrix}, \quad \mathbf{X} = \begin{pmatrix}
 1 &amp; x_{11} &amp; x_{12} &amp; \cdots &amp; x_{1,p-1} \\
-2 &amp; x_{21} &amp; x_{22} &amp; \cdots &amp; x_{2,p-1} \\
+1 &amp; x_{21} &amp; x_{22} &amp; \cdots &amp; x_{2,p-1} \\
 \vdots &amp; &amp; \vdots &amp; &amp; \vdots \\
-n &amp; x_{n1} &amp; x_{n2} &amp; \cdots &amp; x_{n,p-1}
+1 &amp; x_{n1} &amp; x_{n2} &amp; \cdots &amp; x_{n,p-1}
 \end{pmatrix}, \quad 
-\boldsymbol{\beta} = \begin{pmatrix} \beta_1 \\ \vdots \\ \beta_p \end{pmatrix}, \quad \boldsymbol{\epsilon} = \begin{pmatrix} \epsilon_1 \\ \vdots \\ \epsilon_n \end{pmatrix}.
+\boldsymbol{\beta} = \begin{pmatrix} \beta_0 \\ \vdots \\ \beta_{p-1} \end{pmatrix}, \quad \boldsymbol{\epsilon} = \begin{pmatrix} \epsilon_1 \\ \vdots \\ \epsilon_n \end{pmatrix}.
 \]</span></p></li>
 <li>The <strong>least squares estimate</strong> of <span class="math inline">\(\boldsymbol{\beta}\)</span>, called <span class="math inline">\(\widehat{\boldsymbol{\beta}}\)</span>, minimizes <span class="math display">\[
 \|\boldsymbol{\epsilon}\|^2 = \sum_i \epsilon_i^2 = \boldsymbol{\epsilon}^T \boldsymbol{\epsilon} = (\mathbf{y} - \mathbf{X} \boldsymbol{\beta})^T (\mathbf{y} - \mathbf{X} \boldsymbol{\beta}) = \|\mathbf{y} - \mathbf{X} \boldsymbol{\beta}\|^2.
