--- a/hw/hw1/hw1.html
+++ b/hw/hw1/hw1.html
@@ -426,12 +426,12 @@ summary {
 <p>Load the <code>tidyverse</code> package for data manipulation and visualization.</p>
 <pre class="r"><code># tidyverse of data manipulation and visualization
 library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ─────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ─────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.2.1     ✓ purrr   0.3.3
 ## ✓ tibble  2.1.3     ✓ dplyr   0.8.4
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.4.0</code></pre>
-<pre><code>## ── Conflicts ────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <p>Read in the data of COVID-19 cases reported on 2020-04-04.</p>
@@ -1528,7 +1528,7 @@ summary(county_data)</code></pre>
 </div>
 <div id="q2.4" class="section level3">
 <h3>Q2.4</h3>
-<p>Run a logistic regression, using variables <code>state</code> to <code>percent_rural</code> as predictors.</p>
+<p>Run a logistic regression, using variables <code>state</code>, …, <code>percent_rural</code> as predictors.</p>
 </div>
 <div id="q2.5" class="section level3">
 <h3>Q2.5</h3>
@@ -1536,11 +1536,11 @@ summary(county_data)</code></pre>
 </div>
 <div id="q2.6" class="section level3">
 <h3>Q2.6</h3>
-<p>Perform an analysis of deviance to evaluate the fitted model against the model with just intercept.</p>
+<p>Apply analysis of deviance to (1) evaluate the goodness of fit of the model and (2) compare the model to the intercept-only model.</p>
 </div>
 <div id="q2.7" class="section level3">
 <h3>Q2.7</h3>
-<p>Perform an analysis of deviance to evaluate the significance of each predictor. Diplay the 10 most significant predictors.</p>
+<p>Perform analysis of deviance to evaluate the significance of each predictor. Diplay the 10 most significant predictors.</p>
 </div>
 <div id="q2.8" class="section level3">
 <h3>Q2.8</h3>
