--- a/hw/hw1/hw1.html
+++ b/hw/hw1/hw1.html
@@ -417,7 +417,7 @@ summary {
 <div id="data-sources" class="section level3">
 <h3>Data sources</h3>
 <ul>
-<li><p><code>04-04-2020.csv.gz</code>: The data on COVID-19 confirmed cases and deaths on 2020-04-04 is retrieved from the <a href="https://github.com/CSSEGISandData/COVID-19">Johns Hopkins COVID-19 data repository</a>. It was downloaed from this <a href="https://github.com/CSSEGISandData/COVID-19">link</a> (commit 0174f38).</p></li>
+<li><p><code>04-04-2020.csv.gz</code>: The data on COVID-19 confirmed cases and deaths on 2020-04-04 is retrieved from the <a href="https://github.com/CSSEGISandData/COVID-19">Johns Hopkins COVID-19 data repository</a>. It was downloaded from this <a href="https://github.com/CSSEGISandData/COVID-19">link</a> (commit 0174f38).</p></li>
 <li><p><code>us-county-health-rankings-2020.csv.gz</code>: The 2020 County Health Ranking Data was released by <a href="https://www.countyhealthrankings.org">County Health Rankings</a>. The data was downloaded from the <a href="https://www.kaggle.com/roche-data-science-coalition/uncover">Kaggle Uncover COVID-19 Challenge</a> (version 1).</p></li>
 </ul>
 </div>
@@ -426,12 +426,12 @@ summary {
 <p>Load the <code>tidyverse</code> package for data manipulation and visualization.</p>
 <pre class="r"><code># tidyverse of data manipulation and visualization
 library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ──────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ───────────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.2.1     ✓ purrr   0.3.3
 ## ✓ tibble  2.1.3     ✓ dplyr   0.8.4
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.4.0</code></pre>
-<pre><code>## ── Conflicts ─────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ──────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <p>Read in the data of COVID-19 cases reported on 2020-04-04.</p>
@@ -1520,7 +1520,7 @@ summary(county_data)</code></pre>
 </div>
 <div id="q2.2" class="section level3">
 <h3>Q2.2</h3>
-<p>What assumptions of CFR might be violated by defining CFR as <code>deaths/confirmed</code> from this data set? With acknowledgement of these severe limitation, we continue to use <code>deaths/confirmed</code> as a very rough proxy of CFR.</p>
+<p>What assumptions of CFR might be violated by defining CFR as <code>deaths/confirmed</code> from this data set? With acknowledgement of these severe limitations, we continue to use <code>deaths/confirmed</code> as a very rough proxy of CFR.</p>
 </div>
 <div id="q2.3" class="section level3">
 <h3>Q2.3</h3>
@@ -1540,7 +1540,7 @@ summary(county_data)</code></pre>
 </div>
 <div id="q2.7" class="section level3">
 <h3>Q2.7</h3>
-<p>Perform analysis of deviance to evaluate the significance of each predictor. Diplay the 10 most significant predictors.</p>
+<p>Perform analysis of deviance to evaluate the significance of each predictor. Display the 10 most significant predictors.</p>
 </div>
 <div id="q2.8" class="section level3">
 <h3>Q2.8</h3>
