--- a/slides/03-binary/binary.html
+++ b/slides/03-binary/binary.html
@@ -377,7 +377,7 @@ summary {
 <li><a href="#interpretation">Interpretation</a></li>
 <li><a href="#inference-analysis-of-deviance">Inference (analysis of deviance)</a></li>
 <li><a href="#confidence-intervals">Confidence intervals</a></li>
-<li><a href="#diagnosis">Diagnosis</a></li>
+<li><a href="#diagnostics">Diagnostics</a></li>
 <li><a href="#goodness-of-fit">Goodness of fit</a><ul>
 <li><a href="#hosmer-lemeshow-statistic">Hosmer-Lemeshow statistic</a></li>
 <li><a href="#roc-curve">ROC curve</a></li>
@@ -409,12 +409,12 @@ summary {
 ##  [9] knitr_1.28      stringr_1.4.0   xfun_0.12       digest_0.6.24  
 ## [13] rlang_0.4.4     evaluate_0.14</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ───────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ──────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.2.1     ✓ purrr   0.3.3
 ## ✓ tibble  2.1.3     ✓ dplyr   0.8.4
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.4.0</code></pre>
-<pre><code>## ── Conflicts ──────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ─────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(faraway)</code></pre>
@@ -995,8 +995,8 @@ anova(lmodc, lmod, test = &quot;Chi&quot;)</code></pre>
 ## height      -0.02619902  0.07702835
 ## cigs         0.01514949  0.03100534</code></pre>
 </div>
-<div id="diagnosis" class="section level2">
-<h2>Diagnosis</h2>
+<div id="diagnostics" class="section level2">
+<h2>Diagnostics</h2>
 <ul>
 <li>There are two kinds of fitted values (or predicted values). The first is on the scale of the linear predictor, <span class="math inline">\(\eta\)</span>,</li>
 </ul>
