--- a/slides/03-binary/binary.html
+++ b/slides/03-binary/binary.html
@@ -409,12 +409,12 @@ summary {
 ##  [9] knitr_1.28      stringr_1.4.0   xfun_0.12       digest_0.6.24  
 ## [13] rlang_0.4.4     evaluate_0.14</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ──────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ──────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.2.1     ✓ purrr   0.3.3
 ## ✓ tibble  2.1.3     ✓ dplyr   0.8.4
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.4.0</code></pre>
-<pre><code>## ── Conflicts ─────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ─────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(faraway)</code></pre>
@@ -1152,8 +1152,8 @@ X_{\text{HL}}^2 = \sum_{j=1}^J \frac{(y_i - m_j \widehat{p}_j)^2}{m_j \widehat{p
 nrow(wcgs_binned)</code></pre>
 <pre><code>## [1] 52</code></pre>
 <pre class="r"><code># p-value
-pchisq(hlstat, nrow(wcgs_binned), lower.tail = FALSE)</code></pre>
-<pre><code>## [1] 0.1084291</code></pre>
+pchisq(hlstat, nrow(wcgs_binned) - 1, lower.tail = FALSE)</code></pre>
+<pre><code>## [1] 0.09172918</code></pre>
 <p>We see a moderate p-value, which indicates no lack of fit.</p>
 </div>
 <div id="roc-curve" class="section level3">
