--- a/slides/04-binomial/binomial.html
+++ b/slides/04-binomial/binomial.html
@@ -365,7 +365,7 @@ summary {
 <h1 class="title toc-ignore">Binomial Response (ELMR Chapter 3)</h1>
 <h3 class="subtitle">Biostat 200C</h3>
 <h4 class="author">Dr. Hua Zhou @ UCLA</h4>
-<h4 class="date">Apr 9, 2020</h4>
+<h4 class="date">Apr 14, 2020</h4>
 
 </div>
 
@@ -406,12 +406,12 @@ summary {
 ##  [9] knitr_1.28      stringr_1.4.0   xfun_0.12       digest_0.6.24  
 ## [13] rlang_0.4.4     evaluate_0.14</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ──────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.2.1     ✓ purrr   0.3.3
 ## ✓ tibble  2.1.3     ✓ dplyr   0.8.4
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.4.0</code></pre>
-<pre><code>## ── Conflicts ─────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ───────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(faraway)</code></pre>
@@ -479,9 +479,10 @@ p_i = \frac{e^{\eta_i}}{1 + e^{\eta_i}},
 \]</span> where <span class="math inline">\(\eta_i\)</span> is the <strong>linear predictor</strong> or <strong>systematic component</strong> <span class="math display">\[
 \eta_i = \beta_0 + \beta_1 x_{i1} + \cdots + \beta_{q} x_{iq} = \mathbf{x}_i^T \boldsymbol{\beta}
 \]</span></p></li>
-<li><p>The log-likelihood is <span class="math display">\[
-\ell(\boldsymbol{\beta}) = \sum_{i=1}^n \left[ y_i \eta_i - m_i \log ( 1 + e^{\eta_i}) + \log \binom{m_i}{y_i} \right].
-\]</span></p></li>
+<li><p>The log-likelihood is <span class="math display">\[\begin{eqnarray*}
+\ell(\boldsymbol{\beta}) &amp;=&amp; \sum_{i=1}^n \left[ y_i \eta_i - m_i \log ( 1 + e^{\eta_i}) + \log \binom{m_i}{y_i} \right] \\
+&amp;=&amp; \sum_{i=1}^n \left[ y_i \cdot \mathbf{x}_i^T \boldsymbol{\beta} - m_i \log ( 1 + e^{\mathbf{x}_i^T \boldsymbol{\beta}}) + \log \binom{m_i}{y_i} \right].
+\end{eqnarray*}\]</span></p></li>
 <li><p>The Bernoulli model in Chapter 2 is a special case with all batch sizes <span class="math inline">\(m_i = 1\)</span>.</p></li>
 <li><p>Conversely, the Binomial model is equivalent to a Bernoulli model with <span class="math inline">\(\sum_i m_i\)</span> observations, or a Bernoulli model with observation weights <span class="math inline">\((y_i, m_i - y_i)\)</span>.</p></li>
 </ul>
