--- a/slides/04-binomial/binomial.html
+++ b/slides/04-binomial/binomial.html
@@ -407,12 +407,12 @@ summary {
 ##  [9] knitr_1.28      stringr_1.4.0   xfun_0.12       digest_0.6.25  
 ## [13] rlang_0.4.5     evaluate_0.14</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ──────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ───────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.3.0     ✓ purrr   0.3.3
 ## ✓ tibble  3.0.0     ✓ dplyr   0.8.5
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.4.0</code></pre>
-<pre><code>## ── Conflicts ─────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ──────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(faraway)</code></pre>
@@ -501,7 +501,7 @@ lmod %&gt;%
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#mnjxezafyj .gt_table {
+#jytfuehrss .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -529,7 +529,7 @@ lmod %&gt;%
   /* table.border.bottom.color */
 }
 
-#mnjxezafyj .gt_heading {
+#jytfuehrss .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
@@ -548,7 +548,7 @@ lmod %&gt;%
   /* heading.border.lr.color */
 }
 
-#mnjxezafyj .gt_title {
+#jytfuehrss .gt_title {
   color: #333333;
   font-size: 125%;
   /* heading.title.font.size */
@@ -562,7 +562,7 @@ lmod %&gt;%
   border-bottom-width: 0;
 }
 
-#mnjxezafyj .gt_subtitle {
+#jytfuehrss .gt_subtitle {
   color: #333333;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -576,7 +576,7 @@ lmod %&gt;%
   border-top-width: 0;
 }
 
-#mnjxezafyj .gt_bottom_border {
+#jytfuehrss .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -585,7 +585,7 @@ lmod %&gt;%
   /* heading.border.bottom.color */
 }
 
-#mnjxezafyj .gt_column_spanner {
+#jytfuehrss .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -593,7 +593,7 @@ lmod %&gt;%
   padding-bottom: 4px;
 }
 
-#mnjxezafyj .gt_col_headings {
+#jytfuehrss .gt_col_headings {
   border-top-style: solid;
   /* column_labels.border.top.style */
   border-top-width: 2px;
@@ -620,7 +620,7 @@ lmod %&gt;%
   /* column_labels.border.lr.color */
 }
 
-#mnjxezafyj .gt_col_heading {
+#jytfuehrss .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -636,11 +636,11 @@ lmod %&gt;%
   overflow-x: hidden;
 }
 
-#mnjxezafyj .gt_sep_right {
+#jytfuehrss .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#mnjxezafyj .gt_group_heading {
+#jytfuehrss .gt_group_heading {
   padding: 8px;
   /* row_group.padding */
   color: #333333;
@@ -679,7 +679,7 @@ lmod %&gt;%
   vertical-align: middle;
 }
 
-#mnjxezafyj .gt_empty_group_heading {
+#jytfuehrss .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -703,20 +703,20 @@ lmod %&gt;%
   vertical-align: middle;
 }
 
-#mnjxezafyj .gt_striped {
+#jytfuehrss .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
   /* row.striping.background_color */
 }
 
-#mnjxezafyj .gt_from_md > :first-child {
+#jytfuehrss .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#mnjxezafyj .gt_from_md > :last-child {
+#jytfuehrss .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#mnjxezafyj .gt_row {
+#jytfuehrss .gt_row {
   padding-top: 8px;
   /* data_row.padding */
   padding-bottom: 8px;
@@ -746,7 +746,7 @@ lmod %&gt;%
   overflow-x: hidden;
 }
 
-#mnjxezafyj .gt_stub {
+#jytfuehrss .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   /* stub.background.color */
@@ -763,7 +763,7 @@ lmod %&gt;%
   padding-left: 12px;
 }
 
-#mnjxezafyj .gt_summary_row {
+#jytfuehrss .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* summary_row.background.color */
@@ -777,7 +777,7 @@ lmod %&gt;%
   padding-right: 5px;
 }
 
-#mnjxezafyj .gt_first_summary_row {
+#jytfuehrss .gt_first_summary_row {
   padding-top: 8px;
   /* summary_row.padding */
   padding-bottom: 8px;
@@ -792,7 +792,7 @@ lmod %&gt;%
   /* summary_row.border.color */
 }
 
-#mnjxezafyj .gt_grand_summary_row {
+#jytfuehrss .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* grand_summary_row.background.color */
@@ -806,7 +806,7 @@ lmod %&gt;%
   padding-right: 5px;
 }
 
-#mnjxezafyj .gt_first_grand_summary_row {
+#jytfuehrss .gt_first_grand_summary_row {
   padding-top: 8px;
   /* grand_summary_row.padding */
   padding-bottom: 8px;
@@ -821,7 +821,7 @@ lmod %&gt;%
   /* grand_summary_row.border.color */
 }
 
-#mnjxezafyj .gt_table_body {
+#jytfuehrss .gt_table_body {
   border-top-style: solid;
   /* table_body.border.top.style */
   border-top-width: 2px;
@@ -836,7 +836,7 @@ lmod %&gt;%
   /* table_body.border.bottom.color */
 }
 
-#mnjxezafyj .gt_footnotes {
+#jytfuehrss .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   /* footnotes.background.color */
@@ -860,7 +860,7 @@ lmod %&gt;%
   /* footnotes.border.lr.color */
 }
 
-#mnjxezafyj .gt_footnote {
+#jytfuehrss .gt_footnote {
   margin: 0px;
   font-size: 90%;
   /* footnotes.font.size */
@@ -868,7 +868,7 @@ lmod %&gt;%
   /* footnotes.padding */
 }
 
-#mnjxezafyj .gt_sourcenotes {
+#jytfuehrss .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   /* source_notes.background.color */
@@ -892,48 +892,48 @@ lmod %&gt;%
   /* source_notes.border.lr.style */
 }
 
-#mnjxezafyj .gt_sourcenote {
+#jytfuehrss .gt_sourcenote {
   font-size: 90%;
   /* source_notes.font.size */
   padding: 4px;
   /* source_notes.padding */
 }
 
-#mnjxezafyj .gt_left {
+#jytfuehrss .gt_left {
   text-align: left;
 }
 
-#mnjxezafyj .gt_center {
+#jytfuehrss .gt_center {
   text-align: center;
 }
 
-#mnjxezafyj .gt_right {
+#jytfuehrss .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#mnjxezafyj .gt_font_normal {
+#jytfuehrss .gt_font_normal {
   font-weight: normal;
 }
 
-#mnjxezafyj .gt_font_bold {
+#jytfuehrss .gt_font_bold {
   font-weight: bold;
 }
 
-#mnjxezafyj .gt_font_italic {
+#jytfuehrss .gt_font_italic {
   font-style: italic;
 }
 
-#mnjxezafyj .gt_super {
+#jytfuehrss .gt_super {
   font-size: 65%;
 }
 
-#mnjxezafyj .gt_footnote_marks {
+#jytfuehrss .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="mnjxezafyj" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="jytfuehrss" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   
   <thead class="gt_col_headings">
     <tr>
@@ -985,7 +985,7 @@ orings %&gt;%
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#frbcnywqwz .gt_table {
+#onomaxfrom .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -1013,7 +1013,7 @@ orings %&gt;%
   /* table.border.bottom.color */
 }
 
-#frbcnywqwz .gt_heading {
+#onomaxfrom .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
@@ -1032,7 +1032,7 @@ orings %&gt;%
   /* heading.border.lr.color */
 }
 
-#frbcnywqwz .gt_title {
+#onomaxfrom .gt_title {
   color: #333333;
   font-size: 125%;
   /* heading.title.font.size */
@@ -1046,7 +1046,7 @@ orings %&gt;%
   border-bottom-width: 0;
 }
 
-#frbcnywqwz .gt_subtitle {
+#onomaxfrom .gt_subtitle {
   color: #333333;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -1060,7 +1060,7 @@ orings %&gt;%
   border-top-width: 0;
 }
 
-#frbcnywqwz .gt_bottom_border {
+#onomaxfrom .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -1069,7 +1069,7 @@ orings %&gt;%
   /* heading.border.bottom.color */
 }
 
-#frbcnywqwz .gt_column_spanner {
+#onomaxfrom .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -1077,7 +1077,7 @@ orings %&gt;%
   padding-bottom: 4px;
 }
 
-#frbcnywqwz .gt_col_headings {
+#onomaxfrom .gt_col_headings {
   border-top-style: solid;
   /* column_labels.border.top.style */
   border-top-width: 2px;
@@ -1104,7 +1104,7 @@ orings %&gt;%
   /* column_labels.border.lr.color */
 }
 
-#frbcnywqwz .gt_col_heading {
+#onomaxfrom .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -1120,11 +1120,11 @@ orings %&gt;%
   overflow-x: hidden;
 }
 
-#frbcnywqwz .gt_sep_right {
+#onomaxfrom .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#frbcnywqwz .gt_group_heading {
+#onomaxfrom .gt_group_heading {
   padding: 8px;
   /* row_group.padding */
   color: #333333;
@@ -1163,7 +1163,7 @@ orings %&gt;%
   vertical-align: middle;
 }
 
-#frbcnywqwz .gt_empty_group_heading {
+#onomaxfrom .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1187,20 +1187,20 @@ orings %&gt;%
   vertical-align: middle;
 }
 
-#frbcnywqwz .gt_striped {
+#onomaxfrom .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
   /* row.striping.background_color */
 }
 
-#frbcnywqwz .gt_from_md > :first-child {
+#onomaxfrom .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#frbcnywqwz .gt_from_md > :last-child {
+#onomaxfrom .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#frbcnywqwz .gt_row {
+#onomaxfrom .gt_row {
   padding-top: 8px;
   /* data_row.padding */
   padding-bottom: 8px;
@@ -1230,7 +1230,7 @@ orings %&gt;%
   overflow-x: hidden;
 }
 
-#frbcnywqwz .gt_stub {
+#onomaxfrom .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   /* stub.background.color */
@@ -1247,7 +1247,7 @@ orings %&gt;%
   padding-left: 12px;
 }
 
-#frbcnywqwz .gt_summary_row {
+#onomaxfrom .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* summary_row.background.color */
@@ -1261,7 +1261,7 @@ orings %&gt;%
   padding-right: 5px;
 }
 
-#frbcnywqwz .gt_first_summary_row {
+#onomaxfrom .gt_first_summary_row {
   padding-top: 8px;
   /* summary_row.padding */
   padding-bottom: 8px;
@@ -1276,7 +1276,7 @@ orings %&gt;%
   /* summary_row.border.color */
 }
 
-#frbcnywqwz .gt_grand_summary_row {
+#onomaxfrom .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* grand_summary_row.background.color */
@@ -1290,7 +1290,7 @@ orings %&gt;%
   padding-right: 5px;
 }
 
-#frbcnywqwz .gt_first_grand_summary_row {
+#onomaxfrom .gt_first_grand_summary_row {
   padding-top: 8px;
   /* grand_summary_row.padding */
   padding-bottom: 8px;
@@ -1305,7 +1305,7 @@ orings %&gt;%
   /* grand_summary_row.border.color */
 }
 
-#frbcnywqwz .gt_table_body {
+#onomaxfrom .gt_table_body {
   border-top-style: solid;
   /* table_body.border.top.style */
   border-top-width: 2px;
@@ -1320,7 +1320,7 @@ orings %&gt;%
   /* table_body.border.bottom.color */
 }
 
-#frbcnywqwz .gt_footnotes {
+#onomaxfrom .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   /* footnotes.background.color */
@@ -1344,7 +1344,7 @@ orings %&gt;%
   /* footnotes.border.lr.color */
 }
 
-#frbcnywqwz .gt_footnote {
+#onomaxfrom .gt_footnote {
   margin: 0px;
   font-size: 90%;
   /* footnotes.font.size */
@@ -1352,7 +1352,7 @@ orings %&gt;%
   /* footnotes.padding */
 }
 
-#frbcnywqwz .gt_sourcenotes {
+#onomaxfrom .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   /* source_notes.background.color */
@@ -1376,48 +1376,48 @@ orings %&gt;%
   /* source_notes.border.lr.style */
 }
 
-#frbcnywqwz .gt_sourcenote {
+#onomaxfrom .gt_sourcenote {
   font-size: 90%;
   /* source_notes.font.size */
   padding: 4px;
   /* source_notes.padding */
 }
 
-#frbcnywqwz .gt_left {
+#onomaxfrom .gt_left {
   text-align: left;
 }
 
-#frbcnywqwz .gt_center {
+#onomaxfrom .gt_center {
   text-align: center;
 }
 
-#frbcnywqwz .gt_right {
+#onomaxfrom .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#frbcnywqwz .gt_font_normal {
+#onomaxfrom .gt_font_normal {
   font-weight: normal;
 }
 
-#frbcnywqwz .gt_font_bold {
+#onomaxfrom .gt_font_bold {
   font-weight: bold;
 }
 
-#frbcnywqwz .gt_font_italic {
+#onomaxfrom .gt_font_italic {
   font-style: italic;
 }
 
-#frbcnywqwz .gt_super {
+#onomaxfrom .gt_super {
   font-size: 65%;
 }
 
-#frbcnywqwz .gt_footnote_marks {
+#onomaxfrom .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="frbcnywqwz" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="onomaxfrom" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   
   <thead class="gt_col_headings">
     <tr>
@@ -1744,7 +1744,7 @@ Q = \sum_{i=1}^n Q_i
 <li><p><span class="math inline">\(\widehat{\beta}\)</span> is obtained by maximizing <span class="math inline">\(Q\)</span> and <span class="math display">\[
 \widehat{\phi} = \frac{X^2}{n - p}.
 \]</span></p></li>
-<li><p>The <code>mammalsleep</code> data records the sleep behavior of 62 mammals.</p></li>
+<li><p>Let’s revisit the <code>troutegg</code> example.</p></li>
 </ul>
 <pre class="r"><code>modl &lt;- glm(survive / total ~ location + period, 
             family = &quot;quasibinomial&quot;, data = troutegg)
