--- a/slides/08-multinomial/multinomial.html
+++ b/slides/08-multinomial/multinomial.html
@@ -406,12 +406,12 @@ summary {
 ##  [9] knitr_1.28      stringr_1.4.0   xfun_0.13       digest_0.6.25  
 ## [13] rlang_0.4.5     evaluate_0.14</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ─────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.3.0     ✓ purrr   0.3.4
 ## ✓ tibble  3.0.0     ✓ dplyr   0.8.5
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0</code></pre>
-<pre><code>## ── Conflicts ───────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(faraway)</code></pre>
@@ -857,7 +857,7 @@ tibble(t = seq(-6, 6, 0.1), pdf = dlogis(t, location = 0, scale = 1)) %&gt;%
 \]</span></p></li>
 <li><p>The corresponding inverse link function is <span class="math display">\[
 \gamma_{ij} = \frac{\exp (\theta_j - \mathbf{x}_i^T \boldsymbol{\beta})}{1 + \exp (\theta_j - \mathbf{x}_i^T \boldsymbol{\beta})}.
-\]</span> When <span class="math inline">\(\beta_j &gt; 0\)</span>, as <span class="math inline">\(x_{ij}\)</span> increases, <span class="math inline">\(\mathbb{P}(Y_i = j)\)</span> will also increase. This motivates the minus sign in the definition of the model since it allows easier interpretation of <span class="math inline">\(\beta\)</span>.</p></li>
+\]</span> When <span class="math inline">\(\beta_j &gt; 0\)</span>, as <span class="math inline">\(x_{ij}\)</span> increases, <span class="math inline">\(\gamma_{ij} = \mathbb{P}(Y_i \le j)\)</span> decreases the same amount for all <span class="math inline">\(j &lt; J\)</span>, thus <span class="math inline">\(Y_i\)</span> is more likely to take the largest value <span class="math inline">\(J\)</span>. This motivates the minus sign in the definition of the model since it allows easier interpretation of <span class="math inline">\(\beta\)</span>.</p></li>
 <li><p>It is called the <strong>proportional odds model</strong> because the relative odds for <span class="math inline">\(y \le j\)</span> comparing <span class="math inline">\(\mathbf{x}_1\)</span> and <span class="math inline">\(\mathbf{x}_2\)</span> are <span class="math display">\[
 \left( \frac{\gamma_j(\mathbf{x}_1)}{1 - \gamma_j(\mathbf{x}_1)} \right) / \left( \frac{\gamma_j(\mathbf{x}_2)}{1 - \gamma_j(\mathbf{x}_2)} \right) = \exp (- (\mathbf{x}_1 - \mathbf{x}_2)^T \boldsymbol{\beta}),
 \]</span> which do not dependent on <span class="math inline">\(j\)</span>. Here <span class="math inline">\(\gamma_j(\mathbf{x}_i) = \gamma_{ij}\)</span>.</p></li>
