--- a/slides/09-glm/glm.html
+++ b/slides/09-glm/glm.html
@@ -596,7 +596,7 @@ library(faraway)</code></pre>
 &amp; &amp; + \sum_{i=1}^n \frac{(y_i - \mu_i) [\mu_i'(\eta_i)]^2 (d \sigma_i^{2} / d\mu_i)}{\sigma_i^4} \mathbf{x}_i \mathbf{x}_i^T.
 \end{eqnarray*}\]</span> <strong>Show this in HW3</strong>. For GLMs with canonical links, the second term and third term cancel using the fact <span class="math display">\[
 \frac{d\mu_i}{d \eta_i} = \frac{d\mu_i}{d \theta_i} = \frac{d \, b'(\theta_i)}{d \theta_i} = b''(\theta_i) = \frac{\sigma_i^2}{a(\phi)}.
-\]</span> It’s immediate that the negative Hessian is positive semidefinte and Newton’s algorithm with line search is stable.</p>
+\]</span> Therefore for canonical link the negative Hessian is positive semidefinte and Newton’s algorithm with line search is stable.</p>
 <p>See Biostat 216 <a href="https://ucla-biostat216-2019fall.github.io/slides/16-matrixcalc/16-matrixcalc.html">lecture notes</a> for a refresher of matrix calculus.</p></li>
 <li><p>How about non-canonical link? We use the expected (Fisher) information matrix <span class="math display">\[
 \mathbb{E} [- \nabla^2 \ell(\boldsymbol{\beta})] = \sum_{i=1}^n \frac{[\mu_i'(\eta_i)]^2}{\sigma_i^2} \mathbf{x}_i \mathbf{x}_i^T = \mathbf{X}^T \mathbf{W} \mathbf{X} \succeq 0,
