--- a/slides/10-survival/survival.html
+++ b/slides/10-survival/survival.html
@@ -413,12 +413,12 @@ summary {
 ##  [9] knitr_1.28      stringr_1.4.0   xfun_0.13       digest_0.6.25  
 ## [13] rlang_0.4.5     evaluate_0.14</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ───────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.3.0     ✓ purrr   0.3.4
 ## ✓ tibble  3.0.0     ✓ dplyr   0.8.5
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0</code></pre>
-<pre><code>## ── Conflicts ──────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <p>This lecture note draws heavily on the Chapter 10 of textbook <em>An Introduction to Generalized Linear Models</em> by Dobson and Barnett (2nd or 3rd edition). <a href="https://ucla.on.worldcat.org/oclc/317751780">ULCA library link to the 2nd edition</a>.</p>
@@ -761,9 +761,7 @@ L = \prod_{j=1}^r f(y_j) \times \prod_{j=r+1}^n S(y_j) = \prod_{j=1}^n f(y_j)^{\
 <ul>
 <li><p>The log-likelihood for the exponential model is <span class="math display">\[
 \ell(\boldsymbol{\theta}) = \sum_j [\delta_j \log h(y_j) + \log S(y_j)] = \sum_j (\delta_j \log \theta_j - \theta_j y_j).
-\]</span> The right hand side resembles the log-likelihood if treating <span class="math inline">\(\delta_j\)</span> as Poisson<span class="math inline">\((\mu_j)\)</span> where <span class="math inline">\(\mu_j = \theta_j y_j\)</span>. If we use the log link, then <span class="math display">\[
-\log \mu_j = \log \theta_j + \log y_j.
-\]</span> So the survival times <span class="math inline">\(y_j\)</span> are included in the model as an offset term <span class="math inline">\(\log y_j\)</span>.</p></li>
+\]</span> The right hand side resembles the log-likelihood if treating <span class="math inline">\(\delta_j\)</span> as Poisson<span class="math inline">\((\mu_j)\)</span> where <span class="math inline">\(\mu_j = \theta_j y_j\)</span>. Only the survival times <span class="math inline">\(y_j\)</span> are included in the model as an offset term <span class="math inline">\(\log y_j\)</span>.</p></li>
 <li><p>Proportional hazards model is modeled with <span class="math inline">\(\theta = e^{\mathbf{x}^T \boldsymbol{\beta}}\)</span>. We have <span class="math display">\[
 \ell(\boldsymbol{\beta}) = \sum_j (\delta_j \cdot \mathbf{x}_j^T \boldsymbol{\beta} - y_j e^{\mathbf{x}_j^T \boldsymbol{\beta}}) = \sum_j \left\{ \delta_j \cdot [\mathbf{x}_j^T \boldsymbol{\beta} + \log(y_j)] - y_j e^{\mathbf{x}_j^T \boldsymbol{\beta}} - \delta_j \log(y_j) \right\}.
 \]</span></p></li>
@@ -817,16 +815,14 @@ summary(emod)</code></pre>
 <h3>Weibull model</h3>
 <ul>
 <li><p>With link function <span class="math inline">\(\phi = \alpha e^{\mathbf{x}^T \boldsymbol{\beta}}\)</span>, the log-likelihood of Weibull model is <span class="math display">\[\begin{eqnarray*}
-\ell(\boldsymbol{\beta}) &amp;=&amp; \sum_j [\delta_j \log h(y_j) + \log S(y_j)] \\
-&amp;=&amp; \sum_{j=1}^n [\delta_j \log (\lambda \alpha y_j^{\lambda - 1} e^{\mathbf{x}^T \boldsymbol{\beta}}) - \alpha y_j^{\lambda} e^{\mathbf{x}^T \boldsymbol{\beta}}] \\
-&amp;=&amp; \sum_{j=1}^n [\delta_j \log (\lambda \alpha y_j^{\lambda} e^{\mathbf{x}^T \boldsymbol{\beta}}) - \alpha y_j^{\lambda} e^{\mathbf{x}^T \boldsymbol{\beta}} - \delta_j \log y_j].
-\end{eqnarray*}\]</span> Again this is almost the log-likelihood if we pretend <span class="math inline">\(\delta_j\)</span> are independent Poisson<span class="math inline">\((\mu_j)\)</span> where <span class="math inline">\(\mu_j = \alpha y_j^{\lambda} e^{\mathbf{x}^T \boldsymbol{\beta}}\)</span>.</p></li>
-<li><p>The log link gives <span class="math display">\[
-\log \mu_j = \log \alpha + \lambda \log y_j + \mathbf{x}_j^T \boldsymbol{\beta}.
-\]</span> Therefore we should include offset term <span class="math inline">\(\lambda \log y_j\)</span> in the Poisson regression.</p></li>
+\ell(\boldsymbol{\beta}, \lambda) &amp;=&amp; \sum_j [\delta_j \log h(y_j) + \log S(y_j)] \\
+&amp;=&amp; \sum_{j=1}^n [\delta_j \log (\lambda \alpha y_j^{\lambda - 1} e^{\mathbf{x}_j^T \boldsymbol{\beta}}) - \alpha y_j^{\lambda} e^{\mathbf{x}_j^T \boldsymbol{\beta}}] \\
+&amp;=&amp; \sum_{j=1}^n [\delta_j [\log (\alpha y_j^{\lambda} e^{\mathbf{x}^T \boldsymbol{\beta}}) + \log \lambda - \log y_j] - \alpha y_j^{\lambda} e^{\mathbf{x}_j^T \boldsymbol{\beta}}] \\
+&amp;=&amp; \sum_{j=1}^n \{\delta_j [\log \alpha + \lambda \log y_j + \mathbf{x}_j^T \boldsymbol{\beta}] - \alpha y_j^{\lambda} e^{\mathbf{x}_j^T \boldsymbol{\beta}} + \delta_j(\log \lambda - \log y_j)\}.
+\end{eqnarray*}\]</span> Again this is almost the log-likelihood if we pretend <span class="math inline">\(\delta_j\)</span> are independent Poisson<span class="math inline">\((\mu_j)\)</span> where <span class="math inline">\(\mu_j = \alpha y_j^{\lambda} e^{\mathbf{x}^T \boldsymbol{\beta}}\)</span> and include <span class="math inline">\(\lambda \log y_j\)</span> as offset.</p></li>
 <li><p>Setting the derivative wrt <span class="math inline">\(\lambda\)</span> to 0 <span class="math display">\[
 \frac{\partial \ell}{\partial \lambda} = \sum_{j=1}^n \frac{\delta_j}{\lambda} + \delta_j \log y_j - (\log y_j) (\alpha y_j^{\lambda} e^{\mathbf{x}^T \boldsymbol{\beta}}) = 0
-\]</span> yields the estimation equation <span class="math display">\[
+\]</span> suggests an update <span class="math display">\[
 \widehat{\lambda} = \frac{\sum_j \delta_j}{\sum_{j=1}^n (\mu_j - \delta_j) \log y_j}.
 \]</span> This suggests an estimation procedure that alternately updates <span class="math inline">\(\lambda\)</span> by above equation and then updates <span class="math inline">\(\boldsymbol{\beta}\)</span> by a Poisson regression with offset <span class="math inline">\(\lambda \log (y_i)\)</span>. The damping update recommended by Aitkin and Clayton (1980) improves the convergence <span class="math display">\[
 \lambda^{(k)} = \frac{\lambda^{(k-1)} + \widehat{\lambda}}{2}.
